--- a/Day-03/index1.html
+++ b/Day-03/index1.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tutorial on Js</title>
 </head>
+
 <body>
     <h1>This is Js tutorial by Harry</h1>
 </body>
 
-<script src="../Day-02/tut2.js"></script>
-<script src="../Day-02/tut3.js"></script>
+<!-- <script src="../Day-02/tut2.js"></script> -->
+<script src="../Day-03/tut3.js"></script>
 
