--- a/Day-04/index1.html
+++ b/Day-04/index1.html
@@ -10,4 +10,8 @@
     <h1>This is Js tutorial by Harry</h1>
 </body>
 
-<script src="../Day-02/tut2.js"></script>
+<!-- <script src="../Day-02/tut2.js"></script> -->
+<!-- <script src="../Day-03/tut3.js"></script> -->
+<script src="../Day-04/tut4.js"></script>
+
+
