--- a/Day-05/index1.html
+++ b/Day-05/index1.html
@@ -9,10 +9,13 @@
 </head>
 
 <body>
-    <!------ <script src="js/tut11.js"></script>----->
     <h1>This is Js tutorial by Harry</h1>
 </body>
 
-<script src="../Day-02/tut2.js"></script>
+<!-- <script src="../Day-02/tut2.js"></script> -->
+<!-- <script src="../Day-03/tut3.js"></script> -->
+<!-- <script src="../Day-04/tut4.js"></script> -->
+<script src="../Day-05/tut5.js"></script>
+
 
 </html>
