--- a/Day-08/index1.html
+++ b/Day-08/index1.html
@@ -17,7 +17,9 @@
 <!-- <script src="../Day-04/tut4.js"></script> -->
 <!-- <script src="../Day-05/tut5.js"></script> -->
 <!-- <script src="../Day-06/tut6.js"></script> -->
-<script src="../Day-07/tut7.js"></script>
+<!-- <script src="../Day-07/tut7.js"></script> -->
+<script src="../Day-08/tut8.js"></script>
+
 
 
 </html>
