--- a/Day-10/index1.html
+++ b/Day-10/index1.html
@@ -19,8 +19,8 @@
 <!-- <script src="../Day-06/tut6.js"></script> -->
 <!-- <script src="../Day-07/tut7.js"></script> -->
 <!-- <script src="../Day-08/tut8.js"></script> -->
-<script src="../Day-09/tut9.js"></script>
-
+<!-- <script src="../Day-09/tut9.js"></script> -->
+<script src="../Day-10/tut10.js"></script>
 
 
 </html>
