--- a/Day-10/index1.html
+++ b/Day-10/index1.html
@@ -20,7 +20,9 @@
 <!-- <script src="../Day-07/tut7.js"></script> -->
 <!-- <script src="../Day-08/tut8.js"></script> -->
 <!-- <script src="../Day-09/tut9.js"></script> -->
-<script src="../Day-10/tut10.js"></script>
+<!-- <script src="../Day-10/tut10.js"></script> -->
+<script src="../Day-10/tut11.js"></script>
+
 
 
 </html>
