--- a/Day-16/webpage.html
+++ b/Day-16/webpage.html
@@ -39,7 +39,9 @@
 <!-- <script src="/Day-12/tut12.js"></script> -->
 <!-- <script src="/Day-13/tut13.js"></script> -->
 <!-- <script src="/Day-14/tut14.js"></script> -->
-<script src="/Day-15/tut15.js"></script>
+<!-- <script src="/Day-15/tut15.js"></script> -->
+<script src="/Day-16/tut16.js"></script>
+
 
 
 </html>
