--- a/Day-23/webpage.html
+++ b/Day-23/webpage.html
@@ -45,7 +45,9 @@
 <!-- <script src="/Day-18/tut18.js"></script> -->
 <!-- <script src="/Day-19/tut19.js"></script> -->
 <!-- <script src="/Day-20/tut20.js"></script> -->
-<script src="/Day-22/tut22.js"></script>
+<!-- <script src="/Day-22/tut22.js"></script> -->
+<script src="/Day-23/tut23.js"></script>
+
 
 
 
