--- a/Day-24/webpage.html
+++ b/Day-24/webpage.html
@@ -46,7 +46,8 @@
 <!-- <script src="/Day-19/tut19.js"></script> -->
 <!-- <script src="/Day-20/tut20.js"></script> -->
 <!-- <script src="/Day-22/tut22.js"></script> -->
-<script src="/Day-23/tut23.js"></script>
+<!-- <script src="/Day-23/tut23.js"></script> -->
+<script src="/Day-24/tut24.js"></script>
 
 
 
