--- a/Day-17/webpage.html
+++ b/Day-17/webpage.html
@@ -10,32 +10,33 @@
 
 <body>
     <div class="container">
-        <h1 id="heading"> Welcome to Code With Harry</h1>
+        <h1 id="heading" class="yourhead this is"> Welcome to Google</h1>
         <div id="myfirst" class="child red good" id="first">child 1
 
-            <ul class="this">
-                <li class="childul">this</li>
+            <ul class="this" id="myul">
+                <li class="childul" id="fui">this</li>
                 <li class="childul">is</li>
                 <li class="childul">a</li>
                 <li class="childul">list </li>
-                <li class="childul">of my dreams</li>
+                <li class="childul" id="lui">of my dreams</li>
             </ul>
+
         </div>
         <div class="child">child 2</div>
         <div class="child red">child 3</div>
         <div class="child">child 4</div>
         <form action="none.html" method="post">
-            <a href="//fb.com">Go to facebook</a>
+            <a href="//google.com">Go to Google</a>
             <br>
             <br> Search this website: <input type="text" name="Hello" id="">
             <input type="button" value="submit">
         </form>
     </div>
-    <br>
     <div class="no">this is a dummy div1</div>
     <div class="no">this is a dummy div2</div>
     <div class="no">this is a dummy div3</div>
 </body>
+
 <!-- <script src="/Day-12/tut12.js"></script> -->
 <!-- <script src="/Day-13/tut13.js"></script> -->
 <!-- <script src="/Day-14/tut14.js"></script> -->
