--- a/Day-18/webpage.html
+++ b/Day-18/webpage.html
@@ -10,28 +10,27 @@
 
 <body>
     <div class="container">
-        <h1 id="heading"> Welcome to Code With Harry</h1>
+        <h1 id="heading" class="yourhead this is"> Welcome to Google</h1>
         <div id="myfirst" class="child red good" id="first">child 1
-
-            <ul class="this">
-                <li class="childul">this</li>
+            <ul class="this" id="myul">
+                <li class="childul" id="fui">this</li>
                 <li class="childul">is</li>
                 <li class="childul">a</li>
                 <li class="childul">list </li>
-                <li class="childul">of my dreams</li>
+                <li class="childul" id="lui">of my dreams</li>
             </ul>
         </div>
         <div class="child">child 2</div>
         <div class="child red">child 3</div>
         <div class="child">child 4</div>
         <form action="none.html" method="post">
-            <a href="//fb.com">Go to facebook</a>
+            <a href="//google.com">Go to Google</a>
             <br>
             <br> Search this website: <input type="text" name="Hello" id="">
-            <input type="button" value="submit">
+            <button id="btn">Submit form</button>
+            <!-- <input type="submit" id="btn" value="submit"> -->
         </form>
     </div>
-    <br>
     <div class="no">this is a dummy div1</div>
     <div class="no">this is a dummy div2</div>
     <div class="no">this is a dummy div3</div>
@@ -43,6 +42,5 @@
 <!-- <script src="/Day-16/tut16.js"></script> -->
 <!-- <script src="/Day-17/tut17.js"></script> -->
 <script src="/Day-18/tut18.js"></script>
-
 
 </html>
