--- a/Day-27/webpage.html
+++ b/Day-27/webpage.html
@@ -49,6 +49,7 @@
 <!-- <script src="/Day-23/tut23.js"></script> -->
 <!-- <script src="/Day-24/tut24.js"></script> -->
 <!-- <script src="/Day-25/tut25.js"></script> -->
-<script src="/Day-26/tut26.js"></script>
+<!-- <script src="/Day-26/tut26.js"></script> -->
+<script src="/Day-27/tut27.js"></script>
 
 </html>
