--- a/Day-28/webpage.html
+++ b/Day-28/webpage.html
@@ -38,7 +38,20 @@
 <!-- <script src="/Day-12/tut12.js"></script> -->
 <!-- <script src="/Day-13/tut13.js"></script> -->
 <!-- <script src="/Day-14/tut14.js"></script> -->
-<!-- 
+<!-- <script src="/Day-15/tut15.js"></script> -->
+<!-- <script src="/Day-16/tut16.js"></script> -->
+<!-- <script src="/Day-17/tut17.js"></script> -->
+<!-- <script src="/Day-18/tut18.js"></script> -->
+<!-- <script src="/Day-19/tut19.js"></script> -->
+<!-- <script src="/Day-20/tut20.js"></script> -->
+<!-- <script src="/Day-22/tut22.js"></script> -->
+<!-- <script src="/Day-23/tut23.js"></script> -->
+<!-- <script src="/Day-24/tut24.js"></script> -->
+<!-- <script src="/Day-25/tut25.js"></script> -->
+<!-- <script src="/Day-26/tut26.js"></script> -->
+<!-- <script src="/Day-27/tut27.js"></script> -->
+<script src="/Day-28/tut28.js"></script>
+
 
 
 </html>
