--- a/Day-07/index1.html
+++ b/Day-07/index1.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>This is Js tutorial by Harry</h1>
+    <h1>Happy_Learning_JavaScript</h1>
+
 </body>
 
 <!-- <script src="../Day-02/tut2.js"></script> -->
