--- a/Day-31 Ajax/Ajax.html
+++ b/Day-31 Ajax/Ajax.html
@@ -9,11 +9,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Ajax in one video - CodeWithHarry</title>
+    <title>Ajax</title>
 </head>
 
 <body>
-    <h1>Ajax tutorial</h1>
+    <h1>JavaScript_Learning_Day-30</h1>
+    <h1>AJAX: Asynchronous JavaScript and XML
+    </h1>
     <button type="button" id="fetchBtn" class="btn btn-primary">Fetch Data</button>
     <button type="button" id="popBtn" class="btn btn-secondary">Populate</button>
 
