--- a/Day-31 Ajax/Ajax.html
+++ b/Day-31 Ajax/Ajax.html
@@ -14,8 +14,8 @@
 
 <body>
     <h1>JavaScript_Learning_Day-30</h1>
-    <h1>AJAX: Asynchronous JavaScript and XML
-    </h1>
+    <h1>AJAX: Asynchronous JavaScript and XML </h1>
+
     <button type="button" id="fetchBtn" class="btn btn-primary">Fetch Data</button>
     <button type="button" id="popBtn" class="btn btn-secondary">Populate</button>
 
