--- a/Day-32 Ex-04/webpage.html
+++ b/Day-32 Ex-04/webpage.html
@@ -51,7 +51,9 @@
 <!-- <script src="/Day-26/tut26.js"></script> -->
 <!-- <script src="/Day-27/tut27.js"></script> -->
 <!-- <script src="/Day-28/tut28.js"></script> -->
-<script src="/Day-29/tut29.js"></script>
+<!-- <script src="/Day-29/tut29.js"></script> -->
+<script src="/Day-32 Ex-04/tut32.js"></script>
+
 
 
 
