--- a/Day-33/webpage.html
+++ b/Day-33/webpage.html
@@ -35,6 +35,8 @@
     <div class="no">this is a dummy div1</div>
     <div class="no">this is a dummy div2</div>
     <div class="no">this is a dummy div3</div>
+    <h1>Student List</h1>
+    <ul id="students"></ul>
 </body>
 <!-- <script src="/Day-12/tut12.js"></script> -->
 <!-- <script src="/Day-13/tut13.js"></script> -->
