--- a/Day-34 Ex-05/webpage.html
+++ b/Day-34 Ex-05/webpage.html
@@ -56,6 +56,7 @@
 <!-- <script src="/Day-28/tut28.js"></script> -->
 <!-- <script src="/Day-29/tut29.js"></script> -->
 <!-- <script src="/Day-32 Ex-04/tut32.js"></script> -->
-<script src="/Day-33/tut33.js"></script>
+<!-- <script src="/Day-33/tut33.js"></script> -->
+<script src="/Day-34 Ex-05/tut34.js"></script>
 
 </html>
