--- a/Day-35/webpage.html
+++ b/Day-35/webpage.html
@@ -59,5 +59,7 @@
 <!-- <script src="/Day-33/tut33.js"></script> -->
 <!-- <script src="/Day-34 Ex-05/tut34.js"></script> -->
 <script src="/Day-35/tut35.js"></script>
+<script src="/Day-35/tut35b.js"></script>
+
 
 </html>
