--- a/Day-35/webpage.html
+++ b/Day-35/webpage.html
@@ -58,7 +58,7 @@
 <!-- <script src="/Day-32 Ex-04/tut32.js"></script> -->
 <!-- <script src="/Day-33/tut33.js"></script> -->
 <!-- <script src="/Day-34 Ex-05/tut34.js"></script> -->
-<script src="/Day-35/tut35.js"></script>
+<!-- <script src="/Day-35/tut35.js"></script> -->
 <script src="/Day-35/tut35b.js"></script>
 
 
