--- a/Day-03/index1.html
+++ b/Day-03/index1.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tutorial on Js</title>
+    <title>JavaScript</title>
 </head>
 
 <body>
-    <h1>This is Js tutorial by Harry</h1>
+    <h1>Happy Learning JavaScript</h1>
 </body>
 
 <!-- <script src="../Day-02/tut2.js"></script> -->
