--- a/Day-06/index1.html
+++ b/Day-06/index1.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>This is Js tutorial by Harry</h1>
+    <h1>Samir Gayatri </h1>
+
 </body>
 
 <!-- <script src="../Day-02/tut2.js"></script> -->
