--- a/Day-02/index1.html
+++ b/Day-02/index1.html
@@ -10,7 +10,8 @@
 
 <body>
 
-    <h1>This is Js tutorial by Harry</h1>
+    <h1>Happy_Learning_JavaScript</h1>
+
 </body>
 
 <script src="../Day-02/tut2.js"></script>
