--- a/Day-05/index1.html
+++ b/Day-05/index1.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Happy_Learning_JavaScript</h1>
-
+    <h1>Samir Gayatri</h1>
 </body>
 
 <!-- <script src="../Day-02/tut2.js"></script> -->
