--- a/Day-29/webpage.html
+++ b/Day-29/webpage.html
@@ -16,7 +16,7 @@
                 <li class="childul" id="fui">This</li>
                 <li class="childul">is</li>
                 <li class="childul">a</li>
-                <li class="childul">list </li>
+                <li class="childul">List </li>
                 <li class="childul" id="lui">of my dreams</li>
             </ul>
         </div>
