--- a/Day-29/webpage.html
+++ b/Day-29/webpage.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
         <div class="child">Child-2</div>
-        <div class="child red">child-3</div>
+        <div class="child red">Child-3</div>
         <div class="child">child-4</div>
         <form action="none.html" method="post">
             <a href="//google.com">Go to Google</a>
