--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -33,7 +33,7 @@
         </form>
     </div>
     <div class="no">this is a dummy Div1</div>
-    <div class="no">this is a dummy div2</div>
+    <div class="no">this is a dummy Div2</div>
     <div class="no">this is a dummy div3</div>
     <h1>Student List</h1>
     <ul id="students"></ul>
