--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -36,7 +36,7 @@
     <div class="no">this is a dummy Div2</div>
     <div class="no">this is a dummy Div3</div>
     <h1>Student List</h1>
-    <ul id="students"></ul>
+    <ul id="Students"></ul>
 </body>
 <!-- <script src="/Day-12/tut12.js"></script> -->
 <!-- <script src="/Day-13/tut13.js"></script> -->
