--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -28,7 +28,7 @@
             <a href="//google.com">Go to Google</a>
             <br>
             <br> Search This Website: <input type="text" name="Hello" id="">
-            <button id="btn">Submit form</button>
+            <button id="btn">Submit Form</button>
             <!-- <input type="submit" id="btn" value="submit"> -->
         </form>
     </div>
