--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -32,7 +32,7 @@
             <!-- <input type="submit" id="btn" value="submit"> -->
         </form>
     </div>
-    <div class="no">this is a dummy Div1</div>
+    <div class="no">This is a dummy Div1</div>
     <div class="no">this is a dummy Div2</div>
     <div class="no">this is a dummy Div3</div>
     <h1>Student List</h1>
