--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -34,7 +34,7 @@
     </div>
     <div class="no">This is a dummy Div1</div>
     <div class="no">This is a dummy Div2</div>
-    <div class="no">this is a dummy Div3</div>
+    <div class="no">This is a dummy Div3</div>
     <h1>Student List</h1>
     <ul id="Students"></ul>
 </body>
