--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -33,7 +33,7 @@
         </form>
     </div>
     <div class="no">This is a Dummy Div1</div>
-    <div class="no">This is a dummy Div2</div>
+    <div class="no">This is a Dummy Div2</div>
     <div class="no">This is a dummy Div3</div>
     <h1>Student List</h1>
     <ul id="Students"></ul>
