--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -14,10 +14,10 @@
         <h1 id="heading" class="yourhead this is"> Welcome to Google</h1>
         <div id="myfirst" class="child red good" id="first">child 1
             <ul class="this" id="myul">
-                <li class="childul" id="fui">this</li>
+                <li class="childul" id="fui".>this</li>
                 <li class="childul">is</li>
                 <li class="childul">a</li>
-                <li class="childul">list </li>
+                <li class="childul">List </li>
                 <li class="childul" id="lui">of My Dreams</li>
             </ul>
         </div>
