--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -62,7 +62,5 @@
 <!-- <script src="/Day-35/tut35b.js"></script> -->
  <!-----   <script src="/Day-37/tut37.js"></script> ---->
 
-<script src="/Day-38/tut38.js"></script>
-gsjydifvsjsjidjxfdd
-jfhddjhueusdjfvjjnjhskf
+<script 
 </html>
