--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -60,7 +60,8 @@
 <!-- <script src="/Day-34 Ex-05/tut34.js"></script> -->
 <!-- <script src="/Day-35/tut35.js"></script> -->
 <!-- <script src="/Day-35/tut35b.js"></script> -->
- <!-----   <script src="/Day-37/tut37.js"></script> ---->
-
-<script hdhfvbhsjjejdjskkbrhzjjxhjdhfjgjhshdu
+ <!-----   <script src="/Day-37/tut37.js"></script> -------->
+ <script type="text/javascript" charset="utf-8">
+   
+ </script>
 </html>
