--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -61,6 +61,6 @@
 <!-- <script src="/Day-35/tut35.js"></script> -->
 <!-- <script src="/Day-35/tut35b.js"></script> -->
  <!-----   <script src="/Day-37/tut37.js"></script> -------->
- <script type="text/javascript" charset="utf-8">bdjx
+ <script type="text/javascript" charset="utf-8">
  </script>
 </html>
