--- a/Day-38/Webpage.html
+++ b/Day-38/Webpage.html
@@ -62,5 +62,5 @@
 <!-- <script src="/Day-35/tut35b.js"></script> -->
  <!-----   <script src="/Day-37/tut37.js"></script> -------->
  <script type="text/javascript" charset="utf-8">
- </script> vsh
+ </script>
 </html>
